python/src/gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    # nginx.ingress.kubernetes.ip/proxy-body-size: 100m
    # nginx.ingress.kubernetes.ip/proxy-read-timeout: 600s
    # nginx.ingress.kubernetes.ip/proxy-send-timeout: 600s
    # kubernetes.io/ingress.class: nginx

    # This is what works when using `minikube tunnel`
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
    kubernetes.io/ingress.class: nginx
    
    # spec.ingressClassName: nginx
    # nginx.org/client-max-body-size: 100m
    # nginx.org/proxy-connect-timeout: 600s
    # nginx.org/proxy-read-timeout: 600s
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
